style: fixed overlapping elements due to enlarged size from media queries

--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,12 @@ body{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 1000px;
+    max-width: 1300px;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: scroll;
+
 }
 
 .additional-info-modal-container{
@@ -114,13 +115,15 @@ select{
 }
 
 .primary-btn{
-    width: 300px;
+    min-width: 316px;
+    height: 40px;
     display: block;
     font-weight: 500;
     font-size: 16px;
     background: #4D5B9E;
     border-radius: 15px;
     color: white;
+    margin: 0 auto;
 }
 
 .additional-info-btn-container{
@@ -181,7 +184,7 @@ select{
 }
 
 .questions-container{
-  width: 90%;
+  width:100%;
 }
 
 .question-title{
@@ -194,26 +197,33 @@ select{
 
 
 .answer-btn{
-  width: 300px;
+  min-width: 300px;
   padding: 0.5em;
-  margin: 0.2rem auto;
+  margin: 0.2rem;
+  font-size: 1.1rem;
+}
+
+.answer-btn:hover{
+  color: black;
+  font-weight: bold;
+  background-color: orange;
 }
 
 .selected-answer{
-    width: 300px;
-    padding: 0.5em;
-    margin: 0.2rem auto;
+    min-width: 300px;
+      padding: 0.5em;
+      margin: 0.2rem;
+      font-size: 1.1rem;
     background-color: #D6DBF5;
 }
 
 .check-answer-btn{
-    width: 220px;
-    height: 40px;
     background: #4D5B9E;
     border-radius: 10px;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     color: white;
     font-weight: 600;
+    margin-top: 1em;
 }
 
 .disabled{
@@ -233,6 +243,7 @@ select{
 
 .green{
   background-color: #94D7A2;
+  font-weight: bold;
 }
 
 .red{
@@ -260,7 +271,17 @@ select{
   justify-content: center;
   align-items: center;
   font-weight: 700;
-  margin: 0px auto;
+  margin: 0.5rem auto;
+}
+
+
+.choices-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px; 
+  margin: 0 auto;
 }
 
 .rules li{
@@ -308,7 +329,11 @@ select{
 .separator{
   border: 1px solid black;
   border-radius: 5px;
+  max-width: 600px;
+  width: 50%;
+  margin-top: 2em;
 }
+
 
 @keyframes logo-spin {
   from {
@@ -401,11 +426,43 @@ select{
   .primary-btn {
     font-size: 1.2em;
   } 
+
+  .question-title {
+    font-size: 1.3em;
+    line-height: 1.3;
+  }
+    .scoreboard,
+    .rules,
+    .about{
+      padding-top: 6em;
+    }
+    
+  .additional-info-modal-container,
+  .about, 
+  .scoreboard{
+      font-size: 1.15em;
+      line-height: 1.5;
+    }
 }
+
+@media(min-width:700px){
+
+  .choices-container {
+      flex-direction: row;
+      flex-wrap:wrap;
+      width: 800px;
+      margin: 0 auto;
+    }
+}
+
 
 @media(min-width:800px){
   .title-container h1 {
       font-size: 2.7rem;
+  }
+  .question-title {
+    font-size: 1.5em;
+    line-height: 1.3;
   }
 }
 
@@ -436,4 +493,14 @@ select{
       font-size: 1.4em;
   }
 
+  .score-text{
+    font-size: 1.5rem;
+  }
+
+  .check-answer-btn{
+    width: 300px;
+    height: 150px;
+    font-size: 1.7em;
+    padding: 1em 2em;
+  }
 }
